// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Option should render a default Option 1`] = `
<li
  aria-disabled={false}
  aria-selected={false}
  className="option is-default"
  disabled={false}
  role="option"
>
  <span
    className="display"
  >
    display
  </span>
</li>
`;

exports[`Option should render a disabled Option 1`] = `
<li
  aria-disabled={true}
  aria-selected={false}
  className="option is-default is-disabled"
  disabled={true}
  role="option"
>
  <span
    className="display"
  >
    display
  </span>
</li>
`;
